service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nodejs-service
spec:
  selector:
    app: sample-nodejs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
  type: NodePort
